# CCSAT

./: .autopull.sh  .autopush.sh  .gitignore  README.md
Code/: CMakeLists.txt  run.sh  test.py
Code/Circuit/: Circuit.cpp  Circuit.h  Parser.cpp  Parser.h
Code/Common/: Random.h  StringUtil.h  Timer.h
Code/Config/: Config.h  TypeDef.h
Code/Solver/: Solver.cpp  Solver.h  main.cpp
Data/ISCAS85/: c1355.aag  c1908.aag  c2670.aag  c3540.aag  c432.aag  c499.aag  c5315.aag  c6288.aag  c7552.aag  c880.aag
Data/ISCAS89/: s1196.aag  s1238.aag  s1488.aag  s1494.aag  s27.aag  s298.aag  s344.aag  s349.aag  s382.aag  s386.aag  s400.aag  s420.aag  s444.aag  s510.aag  s526.aag  s5378.aag  s641.aag  s713.aag  s820.aag  s832.aag  s838.aag  s953.aag
Draw/: adder_miter.dot  anomaly.dot  bar_miter.dot  c1908.dot  c2670.dot  c3540.dot  c432.dot  c5315.dot  c6288.dot  c7552.dot  c880.dot  cavlc_miter.dot  ctrl_miter.dot  ec_e1_miter.dot  ec_e2_miter.dot  ec_h1_miter.dot  flat30-1.dot  flat30-99.dot  i2c_miter.dot  int2float_miter.dot  max_miter.dot  priority_miter.dot  router_miter.dot  sin_miter.dot  tst_v100_c160.dot  tst_v10_c100.dot  tst_v200_c210.dot  tst_v200_c220.dot  tst_v25_c100.dot
ResRecord/: abc_result.txt  timing_results.xlsx  不等价miter电路测试.csv
