cmake_minimum_required(VERSION 3.22)
project(cirsat VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
message(${CMAKE_SYSTEM_NAME})
set(DEBUG_MODEL 0)
if(DEBUG_MODEL EQUAL 1)
    set(CMAKE_BUILD_TYPE "Debug")
    message("COMPILE DEBUG")
else()
    set(CMAKE_BUILD_TYPE "Release")
    message("COMPILE RELEASE")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DCMAKE_DEBUG_INFO=1)
else()
    add_definitions(-DCMAKE_DEBUG_INFO=0)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3 -g")
    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -static -O3  -fPIC -pie -DTSAN -static-libgcc -static-libstdc++")
    message(STATUS "Configuring on/for Linux" )
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3 ")
    message(STATUS "Configuring on/for macOS")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    message(STATUS "Configuring on/for Windows")
elseif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
    message(STATUS "Configuring on/for IBM AIX")
else()
    message(STATUS "Configuring on/for ${CMAKE_SYSTEM_NAME}")
endif()


include_directories(${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "include_dirs = ${PROJECT_SOURCE_DIR}")
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/Solver Solver)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/Config Config)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/Circuit Circuit)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/Common Common)
add_executable(cirsat ${Solver} ${Config} ${Circuit} ${Common})
